New in v1.1.6 (????/??/??)
--------------------------

Selection fix: empty directories could sometimes be improperly
excluded if certain include expressions involving a non-trailing '**'
were used.  Bug reported by Toni Price.

A few minor changes to help rdiff-backup back up to an SMB/CIFS share.
Thanks to Cengiz Gunay for testing.

Fix a traceback due to an off-by-1 error in "--remove-older-than nB".

Fix a security violation when restoring from a remote repository.
(Patch from Charles Duffy.)

Added times like "Mon Jun 5 11:00:23 1997" to the recognized time
strings.  (Suggested by Wolfgang Dautermann.)


New in v1.1.5 (2006/01/01)
--------------------------

rdiff-backup will now exit by default if it thinks another
rdiff-backup process is currently working on the same repository.

Empty error_log, mirror_metadata, extended_attribute, and
access_control_lists files will no longer be gzipped (suggestion by
Hans F. Nordhaug).

Fix for restoring files in directories with really long names.

Added supplementary rdiff-backup-statistics utility for parsing
rdiff-backup's statistics files (originally based off perl script by
Dean Gaudet).

rdiff-backup should now use much less memory than v1.1.1-1.1.4 if you
have lots of hard links.


New in v1.1.4 (2005/12/13)
--------------------------

Quoting should be enabled only as needed between case-sensitive and
non-case-sensitive systems (thanks for Andrew Ferguson for report).

Files with ACLs will not be unnecessarily marked as changed (bug
report by Carsten Lorenz).

Fix for common KeyError bug introduced in v1.1.3.


New in v1.1.3 (2005/11/25)
--------------------------

Regression metadata bug introduced with 1.1.1/1.1.2 fixed.

rdiff-backup should now give a clean error message (no stack traces!)
when aborted with control-C, killed with a signal, or when the
connection is lost.

When removing older than, delete empty increments directories

Long filename bug finally fixed (phew).  rdiff-backup should now